gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b6227.d
version https://git-lfs.github.com/spec/v1
oid sha256:1698c40150f6255406eb299d468ed67966c8f4dcee4cd43659ea532567504fa7
size 631
